// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server find: string query: contains \`a\` (upper or lower) 1`] = `
Array [
  Object {
    "stringField": "Trantow",
  },
  Object {
    "stringField": "VOLUPTATUM NULLA",
  },
  Object {
    "stringField": "maximillia",
  },
  Object {
    "stringField": "QUAM CULPA",
  },
  Object {
    "stringField": "Madeline",
  },
  Object {
    "stringField": "NAKIA",
  },
  Object {
    "stringField": "nakia",
  },
  Object {
    "stringField": "Nakia",
  },
  Object {
    "stringField": "sed praesentium",
  },
  Object {
    "stringField": "amber",
  },
  Object {
    "stringField": "delfinaz",
  },
  Object {
    "stringField": "SHEMAR",
  },
  Object {
    "stringField": "stark",
  },
  Object {
    "stringField": "elda",
  },
  Object {
    "stringField": "Damien",
  },
  Object {
    "stringField": "earum nesciunt",
  },
  Object {
    "stringField": "illum atque",
  },
  Object {
    "stringField": "schowalter",
  },
  Object {
    "stringField": "MAIORES ADIPISCI",
  },
  Object {
    "stringField": "VELIT ADIPISCI",
  },
  Object {
    "stringField": "AMET QUI",
  },
  Object {
    "stringField": "maiores praesentium",
  },
  Object {
    "stringField": "KAELYN",
  },
  Object {
    "stringField": "alias sint",
  },
  Object {
    "stringField": "molestiae praesentium",
  },
  Object {
    "stringField": "Okuneva",
  },
  Object {
    "stringField": "hartmann",
  },
  Object {
    "stringField": "raquel",
  },
  Object {
    "stringField": "quas fugit",
  },
  Object {
    "stringField": "quia et",
  },
  Object {
    "stringField": "ut consequatur",
  },
  Object {
    "stringField": "iusto perspiciatis",
  },
  Object {
    "stringField": "HAMILL",
  },
  Object {
    "stringField": "LABORE CULPA",
  },
  Object {
    "stringField": "VERITATIS EIUS",
  },
  Object {
    "stringField": "HELGA",
  },
  Object {
    "stringField": "ipsum voluptas",
  },
  Object {
    "stringField": "linnea",
  },
  Object {
    "stringField": "madison",
  },
  Object {
    "stringField": "NUMQUAM ALIQUAM",
  },
  Object {
    "stringField": "macy",
  },
  Object {
    "stringField": "GERLACH",
  },
  Object {
    "stringField": "padberg",
  },
  Object {
    "stringField": "ENIM DICTA",
  },
  Object {
    "stringField": "amalia",
  },
  Object {
    "stringField": "QUAS PERSPICIATIS",
  },
  Object {
    "stringField": "Williamson",
  },
  Object {
    "stringField": "schamberger",
  },
  Object {
    "stringField": "Jared",
  },
  Object {
    "stringField": "QUIDEM FUGIAT",
  },
]
`;

exports[`server find: string query: ends with \`z\` (upper or lower) 1`] = `
Array [
  Object {
    "stringField": "LUEILWITZ",
  },
  Object {
    "stringField": "delfinaz",
  },
  Object {
    "stringField": "horowitz",
  },
]
`;

exports[`server find: string query: exact match (Nakia) 1`] = `
Array [
  Object {
    "stringField": "Nakia",
  },
]
`;

exports[`server find: string query: in list { devin, erling, KAELYN, raquel } 1`] = `
Array [
  Object {
    "stringField": "devin",
  },
  Object {
    "stringField": "erling",
  },
  Object {
    "stringField": "KAELYN",
  },
  Object {
    "stringField": "raquel",
  },
]
`;

exports[`server find: string query: starts with \`b\` (upper or lower) 1`] = `
Array [
  Object {
    "stringField": "BOSCO",
  },
  Object {
    "stringField": "BERENICE",
  },
  Object {
    "stringField": "billie",
  },
  Object {
    "stringField": "Block",
  },
  Object {
    "stringField": "BAUCH",
  },
]
`;

exports[`server getBindingError pulls correct info from binding error 1`] = `
Object {
  "emailField": Object {
    "isEmail": "emailField must be an email",
  },
}
`;

exports[`server queries deeply nested objects 1`] = `
Array [
  Object {
    "booleanField": true,
    "createdById": "abc123",
    "dishes": Array [
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 0",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 1",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 2",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 3",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 4",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 5",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 6",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 7",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 8",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 9",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 10",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 11",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 12",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 13",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 14",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 15",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 16",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 17",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 18",
      },
      Object {
        "kitchenSink": Object {
          "stringField": "My String",
        },
        "name": "Dish 19",
      },
    ],
    "emailField": "hi@warthog.com",
    "floatField": 123.456,
    "integerField": 123,
    "stringField": "My String",
    "updatedById": null,
    "version": 1,
  },
]
`;
